--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,18 +43,18 @@ jobs:
       - name: Build
         run: cargo build --release --target=${{ matrix.target }} --bin passwd-gen
 
-      - name: Rename release binary
-        run: |
-          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            mv target/${{ matrix.target }}/release/passwd-gen target/${{ matrix.target }}/release/${{ matrix.os }}-${{ matrix.rust }}-${{ matrix.target }}-passwd-gen.out;
-          else
-            mv target/${{ matrix.target }}/release/passwd-gen.exe target/${{ matrix.target }}/release/${{ matrix.os }}-${{ matrix.rust }}-${{ matrix.target }}-passwd-gen.exe;
-          fi
+      - name: Rename release binary ${{ matrix.os }}
+        if: matrix.os == 'ubuntu-latest'
+        run: mv target/${{ matrix.target }}/release/passwd-gen target/${{ matrix.target }}/release/${{ matrix.os }}-${{ matrix.rust }}-${{ matrix.target }}-passwd-gen.out
+
+      - name: Rename release binary ${{ matrix.os }}
+        if: matrix.os == 'windows-latest'
+        run: mv target/${{ matrix.target }}/release/passwd-gen.exe target/${{ matrix.target }}/release/${{ matrix.os }}-${{ matrix.rust }}-${{ matrix.target }}-passwd-gen.exe
 
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            target/${{ matrix.target }}/release/${{ matrix.os }}-${{ matrix.rust }}-${{ matrix.target }}-passwd-gen.*
+            target/${{ matrix.target }}/release//${{ matrix.os }}-${{ matrix.rust }}-${{ matrix.target }}-passwd-gen.*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
